--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +47,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "webpack": "^5.89.0"
-  }
+  },
+  "proxy": "http://3.18.112.92:4000"
 }
