--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint  --fix src/**/*.js",
+    "format": "prettier src/**/*.js --write. --config ./.prettierrc"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +47,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.5",
     "webpack": "^5.89.0"
   }
