--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     // Disable "==" and "!=" operators
     "eqeqeq": "off",
     "no-eq-null": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
