--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.8.0",
     "history": "^5.3.0",
+    "markdown-to-jsx": "^7.4.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
